# lemmy

./: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  untyped.rs
crates/parser/: Cargo.toml
crates/parser/src/: combinator.rs  common.rs  error.rs  expression.rs  lexer.rs  lib.rs  spanned.rs  statement.rs  token.rs
crates/parser/src/snapshots/: parser__expression__tests__accessor.snap  parser__expression__tests__block_many_expr.snap  parser__expression__tests__boolean.snap  parser__expression__tests__grouped_ident.snap  parser__expression__tests__ident.snap  parser__expression__tests__invocation_of_ident.snap  parser__expression__tests__invocation_of_ident_with_trailing_comma_in_argument_list.snap  parser__expression__tests__negative_number_literal.snap  parser__expression__tests__nested_groups.snap  parser__expression__tests__number.snap  parser__expression__tests__one_plus_one.snap  parser__expression__tests__presedence_mul_over_plus.snap  parser__expression__tests__simple_function.snap  parser__expression__tests__simple_function_with_block.snap  parser__expression__tests__string.snap
crates/typed/: Cargo.toml
